test/sema/trait_objects/qualified_path_call_method_with_self_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {
  fn val(self: &Self) {}
}

struct S {
  impl A;
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:26: error: cannot unify 'S' with '&impl A'
  @<impl A impl A>::val(S{});
}
